force-app/main/default/objects/Course_Order__c/Course_Order__c.object-meta.xml
<CustomObject>
    <label>Course Order</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Course Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>