force-app/main/default/objects/Course_Order__c/fields/Hosted_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Invoice_URL__c</fullName>
    <label>Hosted Invoice URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>