force-app/main/default/objects/Course_Order__c/fields/Payment_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instrument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Instrument</label>
    <referenceTo>PaymentInstrument</referenceTo>
    <relationshipLabel>Course Orders</relationshipLabel>
    <relationshipName>Course_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>